--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payslip-analyzer-ai",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -34,6 +34,7 @@
     "react-dropzone": "^14.3.5",
     "recharts": "^2.12.7",
     "sonner": "^1.7.0",
+    "swr": "^2.4.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
