--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^6.0.0",
     "@vercel/blob": "^0.24.0",
+    "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.451.0",
     "next": "15.1.11",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "react": "^19.0.0",
@@ -41,6 +44,7 @@
   "devDependencies": {
     "@playwright/test": "^1.48.0",
     "@testing-library/react": "^16.0.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
