--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "next": "15.1.11",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
-    "pdf-parse": "^2.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "sonner": "^1.7.0",
     "swr": "^2.4.0",
+    "unpdf": "^1.4.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
