--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,11 @@ prisma/migrations/migration_lock.toml
 
 # OS
 Thumbs.db
+
+# Windows reserved device names
+nul
+con
+prn
+aux
+com[1-9]
+lpt[1-9]
