--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payslip-analyzer-ai",
-  "version": "1.0.30",
+  "version": "1.0.32",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -28,6 +28,8 @@
     "date-fns": "^4.1.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
+    "jszip": "^3.10.1",
+    "jzip": "^1.0.0",
     "lucide-react": "^0.451.0",
     "next": "^15.5.11",
     "next-auth": "^5.0.0-beta.30",
